--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Hi ya sucker!</h1>
+	<h1>Node.js!</h1>
+	<p>This is a node app.</p>
 </body>
 </html>
